--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
     "vite": "https://esm.sh/vite@^7.3.1",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "vitest": "https://esm.sh/vitest@^4.0.17",
-    "vitest/": "https://esm.sh/vitest@^4.0.17/"
+    "vitest/": "https://esm.sh/vitest@^4.0.17/",
+    "zustand/": "https://esm.sh/zustand@^5.0.10/"
   }
 }
 </script>
